01_Ret180/01_velocity_yp15/slurm-2891140.out
This job can be monitored from: https://grafana.c3se.chalmers.se/d/gpu-job/gpu-job?var-jobid=2891140&from=1727777508000
  File "/mimer/NOBACKUP/groups/kthmech/sadanori/01_Ret180/01_velocity_yp15/sandbox/ViT_tf.py", line 11
    from ../src.vit import vit_b16 
           ^
SyntaxError: invalid syntax
